# vulkan

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
assets/BoomBoxWithAxes/: BoomBoxWithAxes.gltf
assets/BrainStem/: BrainStem.gltf
assets/Pong/: Pong.blend  Pong.blend1  Pong.gltf
assets/cube/: cube.mtl
cmake/: copy_assets.cmake
include/fire_engine/: colour.hpp  display.hpp  fire_engine.hpp  geometry.hpp  graphics_driver.hpp  material.hpp  math.hpp
include/fire_engine/animation/: animation.hpp  animation_selection.hpp  linear_animation.hpp
include/fire_engine/collision/: collider.hpp  collider_id.hpp  collisions.hpp  end_point.hpp  narrow_phase.hpp  sweep_and_prune_broad_phase.hpp
include/fire_engine/core/: gltf_loader.hpp  model_loader.hpp  shader_loader.hpp  system.hpp  tangent_generator.hpp
include/fire_engine/graphics/: assets.hpp  colour3.hpp  draw_command.hpp  frame_info.hpp  geometry.hpp  gpu_handle.hpp  image.hpp  joints4.hpp  ktx_image.hpp  lighting.hpp  material.hpp  model_loader.hpp  object.hpp  sampler_settings.hpp  skin.hpp  texture.hpp  vertex.hpp
include/fire_engine/input/: animation_state.hpp  camera_state.hpp  controller_state.hpp  input.hpp  input_state.hpp  variant_state.hpp
include/fire_engine/math/: constants.hpp  mat4.hpp  quaternion.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vec_base.hpp
include/fire_engine/physics/: collider_shape.hpp  contact.hpp  physics_body.hpp  physics_handle.hpp  physics_world.hpp
include/fire_engine/platform/: application_args.hpp  keyboard.hpp  mouse.hpp  window.hpp
include/fire_engine/render/: constants.hpp  descriptors.hpp  device.hpp  environment_precompute.hpp  frame.hpp  pipeline.hpp  post_processing.hpp  render_context.hpp  render_pass.hpp  renderer.hpp  resources.hpp  shadows.hpp  swapchain.hpp  transmission.hpp  ubo.hpp
include/fire_engine/renderer/: device.hpp  frame.hpp  pipeline.hpp  render_context.hpp  renderer.hpp  swapchain.hpp
include/fire_engine/scene/: animator.hpp  camera.hpp  component.hpp  components.hpp  controllable.hpp  empty.hpp  light.hpp  mesh.hpp  node.hpp  physics_body.hpp  scene_graph.hpp  transform.hpp
shaders/: bloom_downsample.frag  bloom_upsample.frag  brdf_integration.frag  environment_convert.frag  irradiance_convolution.frag  postprocess.frag  postprocess.vert  prefilter_environment.frag  shader.frag  shader.vert  shadow.vert  skybox.frag  skybox.vert
src/: display.cpp  fire_engine.cpp  geometry.cpp  graphics_driver.cpp  material.cpp  math.cpp
src/animation/: animation.cpp  linear_animation.cpp
src/collision/: collider.cpp  collisions.cpp  narrow_phase.cpp  sweep_and_prune_broad_phase.cpp
src/core/: gltf_loader.cpp  model_loader.cpp  shader_loader.cpp  system.cpp  tangent_generator.cpp
src/graphics/: geometry.cpp  image.cpp  ktx_image.cpp  material.cpp  model_loader.cpp  object.cpp  skin.cpp  texture.cpp
src/input/: input.cpp
src/physics/: physics_body.cpp  physics_world.cpp
src/platform/: application.cpp  window.cpp
src/render/: descriptors.cpp  device.cpp  environment_precompute.cpp  frame.cpp  pipeline.cpp  post_processing.cpp  render_context.cpp  render_pass.cpp  renderer.cpp  resources.cpp  shadows.cpp  swapchain.cpp  transmission.cpp
src/renderer/: device.cpp  frame.cpp  pipeline.cpp  renderer.cpp  swapchain.cpp
src/scene/: animator.cpp  camera.cpp  controllable.cpp  empty.cpp  light.cpp  mesh.cpp  node.cpp  physics_body.cpp  scene_graph.cpp  transform.cpp
tests/: test_fire_engine.cpp
tests/animation/: test_animation.cpp  test_linear_animation.cpp
tests/assets/: basic.mtl  empty.mtl  full.mtl  minimal_triangle.gltf  multi.mtl  with_material.mtl
tests/collision/: test_collisions.cpp  test_narrow_phase.cpp  test_sweep_and_prune_broad_phase.cpp
tests/core/: test_gltf_loader.cpp  test_shader_loader.cpp  test_system.cpp  test_tangent_generator.cpp
tests/graphics/: test_assets.cpp  test_colour3.cpp  test_draw_command.cpp  test_frame_info.cpp  test_geometry.cpp  test_gpu_handle.cpp  test_image.cpp  test_joints4.cpp  test_ktx_image.cpp  test_material.cpp  test_model_loader.cpp  test_sampler_settings.cpp  test_skin.cpp  test_texture.cpp  test_vertex.cpp
tests/input/: test_animation_state.cpp  test_camera_state.cpp  test_controller_state.cpp  test_input_state.cpp  test_variant_state.cpp
tests/math/: test_mat4.cpp  test_quaternion.cpp  test_vec2.cpp  test_vec3.cpp  test_vec4.cpp
tests/physics/: test_physics_world.cpp
tests/platform/: test_application_args.cpp
tests/render/: test_pipeline_config.cpp  test_ubo.cpp
tests/scene/: test_animator.cpp  test_camera.cpp  test_controllable.cpp  test_formatter.cpp  test_light.cpp  test_node.cpp  test_scene_graph.cpp  test_transform.cpp
